--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '17'
+          java-version: 17
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
@@ -24,7 +24,7 @@ jobs:
         run: ./gradlew assembleDebug
 
       - name: Upload debug APK
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
-          name: kiss2go-debug
+          name: Kiss2Go-APK
           path: app/build/outputs/apk/debug/app-debug.apk
