--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,8 @@
 name: Build Kiss2Go APK
 
 on:
+  push:
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -8,23 +10,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout repo
+      uses: actions/checkout@v3
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: 17
+    - name: Unzip project
+      run: unzip kiss2go_hello_world.zip
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x ./gradlew
+    - name: Set up JDK
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: '17'
 
-      - name: Build APK
-        run: ./gradlew assembleDebug
+    - name: Grant execute permission for gradlew
+      run: chmod +x ./gradlew
 
-      - name: Upload debug APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: kiss2go-debug-apk
-          path: app/build/outputs/apk/debug/app-debug.apk
+    - name: Build APK
+      run: ./gradlew assembleDebug
+
+    - name: Upload APK
+      uses: actions/upload-artifact@v3
+      with:
+        name: Kiss2Go-APK
+        path: app/build/outputs/apk/debug/app-debug.apk
