--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,6 @@
 name: Build Kiss2Go APK
 
 on:
-  push:
-    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -14,7 +12,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Unzip project
-      run: unzip kiss2go_hello_world.zip
+      run: unzip -o kiss2go_hello_world.zip
 
     - name: Set up JDK
       uses: actions/setup-java@v3
