--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,26 +8,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-    - name: Unzip project
-      run: unzip -o kiss2go_hello_world.zip
+      - name: Unzip project
+        run: unzip -o kiss2go_hello_world.zip -d project
 
-    - name: Set up JDK
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin'
-        java-version: '17'
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x ./gradlew
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./project/gradlew
 
-    - name: Build APK
-      run: ./gradlew assembleDebug
+      - name: Build APK
+        run: ./gradlew assembleDebug
+        working-directory: ./project
 
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: Kiss2Go-APK
-        path: app/build/outputs/apk/debug/app-debug.apk
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: Kiss2Go-APK
+          path: project/app/build/outputs/apk/debug/app-debug.apk
