--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,9 @@
-name: Build Kiss2Go APK
+name: Android Build
 
 on:
+  push:
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
@@ -8,27 +11,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: 📥 Repository klonen
         uses: actions/checkout@v3
 
-      - name: Unzip project
-        run: unzip -o kiss2go_hello_world.zip -d project
+      - name: 📦 Entpacke Projekt-ZIP
+        run: unzip -o kiss2gobready_project.zip -d ./project
 
-      - name: Set up JDK
+      - name: 🧰 Setup Java
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '17'
+          java-version: 17
 
-      - name: Grant execute permission for gradlew
+      - name: 🛠️ Erlaube Gradle Wrapper
         run: chmod +x ./project/gradlew
 
-      - name: Build APK
+      - name: 🏗️ Baue APK
         run: ./gradlew assembleDebug
         working-directory: ./project
 
-      - name: Upload APK
+      - name: 📤 Lade APK hoch
         uses: actions/upload-artifact@v4
         with:
           name: Kiss2Go-APK
-          path: project/app/build/outputs/apk/debug/app-debug.apk
+          path: ./project/app/build/outputs/apk/debug/*.apk
