--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,6 @@
 name: Android Build
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
 
 jobs:
@@ -11,27 +8,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 📥 Repository klonen
-        uses: actions/checkout@v3
+    - name: 📥 Repository klonen
+      uses: actions/checkout@v3
 
-      - name: 📦 Entpacke Projekt-ZIP
-        run: unzip -o kiss2gobready_project.zip -d ./project
+    - name: 📦 Entpacke Projekt-ZIP
+      run: unzip -o kiss2go_ready_project.zip -d ./project
 
-      - name: 🧰 Setup Java
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: 17
+    - name: ☕ Setup Java
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: '17'
 
-      - name: 🛠️ Erlaube Gradle Wrapper
-        run: chmod +x ./project/gradlew
+    - name: ✅ Erlaube Gradle Wrapper
+      run: chmod +x ./project/gradlew
 
-      - name: 🏗️ Baue APK
-        run: ./gradlew assembleDebug
-        working-directory: ./project
+    - name: 🔨 Baue APK
+      run: ./project/gradlew assembleDebug -p ./project
 
-      - name: 📤 Lade APK hoch
-        uses: actions/upload-artifact@v4
-        with:
-          name: Kiss2Go-APK
-          path: ./project/app/build/outputs/apk/debug/*.apk
+    - name: 📤 Lade APK hoch
+      uses: actions/upload-artifact@v4
+      with:
+        name: Kiss2Go-APK
+        path: project/app/build/outputs/apk/debug/app-debug.apk
