--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Android Build
+name: Build Kiss2Go APK
 
 on:
   workflow_dispatch:
@@ -8,27 +8,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 📥 Repository klonen
-        uses: actions/checkout@v3
+    - name: Checkout repo
+      uses: actions/checkout@v3
 
-      - name: 📦 Entpacke Projekt-ZIP
-        run: unzip -o kiss2go_ready_template.zip -d ./project
+    - name: Unzip project
+      run: unzip -o kiss2go_minimal_project.zip -d project
 
-      - name: ☕ Setup Java
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
+    - name: Set up JDK
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: '17'
 
-      - name: 🔧 Erlaube Gradle Wrapper
-        run: chmod +x ./project/gradlew
+    - name: Grant execute permission for gradlew
+      run: chmod +x ./project/gradlew
 
-      - name: 🏗️ Baue APK
-        run: ./project/gradlew assembleDebug
-        working-directory: ./project
+    - name: Build APK
+      run: ./project/gradlew assembleDebug
 
-      - name: 📤 Lade APK hoch
-        uses: actions/upload-artifact@v4
-        with:
-          name: Kiss2Go-APK
-          path: project/app/build/outputs/apk/debug/app-debug.apk
+    - name: Upload APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: Kiss2Go-APK
+        path: project/app/build/outputs/apk/debug/app-debug.apk
