--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,26 +8,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
+      - name: 📥 Repository klonen
+        uses: actions/checkout@v3
 
-    - name: Unzip project
-      run: unzip -o kiss2go_minimal_project.zip -d project
+      - name: 📦 Entpacke Projekt-ZIP
+        run: unzip -o Nuneu.zip -d .
 
-    - name: Set up JDK
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin'
-        java-version: '17'
+      - name: ☕ Setup Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x ./project/gradlew
+      - name: 🔐 Erlaube Gradle Wrapper
+        run: chmod +x ./gradlew
 
-    - name: Build APK
-      run: ./project/gradlew assembleDebug
+      - name: 🔨 Baue APK
+        run: ./gradlew assembleDebug
 
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: Kiss2Go-APK
-        path: project/app/build/outputs/apk/debug/app-debug.apk
+      - name: 📤 Lade APK hoch
+        uses: actions/upload-artifact@v4
+        with:
+          name: Kiss2Go-APK
+          path: app/build/outputs/apk/debug/app-debug.apk
